--- a/FormacaoEmTesteDeSoftware/ToDo/build.gradle
+++ b/FormacaoEmTesteDeSoftware/ToDo/build.gradle
@@ -15,5 +15,6 @@ dependencies {
     compile group: 'info.cukes', name: 'cucumber-java', version: '1.2.5'
     // https://mvnrepository.com/artifact/info.cukes/cucumber-junit
     testCompile group: 'info.cukes', name: 'cucumber-junit', version: '1.2.5'
-
+    // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 }
